; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/cris/arch-v32/mach-a3/extr_vcs_hook.c_hook_init.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/cris/arch-v32/mach-a3/extr_vcs_hook.c_hook_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@hook_init.first = internal global i32 1, align 4
@HOOK_MEM_BASE_ADDR = common dso_local global i32 0, align 4
@hook_base = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @hook_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @hook_init() #0 {
  %1 = load i32, i32* @hook_init.first, align 4
  %2 = icmp ne i32 %1, 0
  br i1 %2, label %3, label %6

3:                                                ; preds = %0
  store i32 0, i32* @hook_init.first, align 4
  %4 = load i32, i32* @HOOK_MEM_BASE_ADDR, align 4
  %5 = call i32 @ioremap(i32 %4, i32 8192)
  store i32 %5, i32* @hook_base, align 4
  br label %6

6:                                                ; preds = %3, %0
  ret void
}

declare dso_local i32 @ioremap(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
